<resources>
    <string name="app_name">Life</string>

    <string name="action_settings">Settings</string>

    <string name="SW">Start / Pause</string>
    <string name="reset">Reset</string>
    <string name="load">Load...</string>
    <string name="random">Random</string>
    <string name="LT">Lifetime: 0</string>
    <string name="NN">200</string>
    <string name="SPD">50</string>
    <string name="Button3">Z+</string>
    <string name="Button4">Z-</string>
    <string name="Button5">Set speed</string>

</resources>
