<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <ImageView
        android:layout_width="@dimen/width_image"
        android:layout_height="@dimen/height_image"
        android:id="@+id/imageView"
        android:layout_above="@+id/NN"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:text="@string/SW"
        android:id="@+id/SW"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:text="@string/reset"
        android:id="@+id/res"
        android:layout_below="@+id/SW"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:text="@string/load"
        android:id="@+id/load"
        android:layout_below="@+id/res"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LT"
        android:id="@+id/LT"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="@dimen/width_edit"
        android:layout_height="@dimen/height_edit"
        android:id="@+id/NN"
        android:text="@string/NN"
        android:phoneNumber="true"
        android:numeric="integer"
        android:inputType="number"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:text="@string/random"
        android:id="@+id/ran"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:text="@string/Button5"
        android:id="@+id/button5"
        android:layout_below="@+id/ran"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="@dimen/width_Z"
        android:layout_height="@dimen/height_Z"
        android:text="@string/Button3"
        android:id="@+id/button3"
        android:layout_below="@+id/button5"
        android:layout_toLeftOf="@+id/button4"
        android:layout_toStartOf="@+id/button4" />

    <Button
        android:layout_width="@dimen/width_Z"
        android:layout_height="@dimen/height_Z"
        android:text="@string/Button4"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5" />

    <EditText
        android:layout_width="@dimen/width_edit"
        android:layout_height="@dimen/height_edit"
        android:id="@+id/SPD"
        android:text="@string/SPD"
        android:inputType="number"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/NN"
        android:layout_toEndOf="@+id/NN" />
</RelativeLayout>
